# be-user-service

./: Dockerfile  commits.txt  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: test_code.yaml
src/: container.py  handlers.py  main.py  setup_app.py
src/application/_common/: user_gateway.py
src/application/auth/: get_profile_use_case.py  login_use_case.py  register_use_case.py  send_sms_use_case.py
src/application/users/: user_retrieve_case.py
src/domain/: enums.py  exceptions.py
src/domain/entities/: interest.py  user.py  user_bio.py  user_image.py  user_interested.py  user_location.py
src/domain/interfaces/: base_schema.py  entity.py  interactor.py  jwt_service.py  redis.py  repository.py  security.py  uow.py  use_case.py
src/domain/repositories/: iinterest_repository.py  iuser_bio_repository.py  iuser_image_repository.py  iuser_images_repository.py  iuser_interested_repository.py  iuser_location_repository.py  iuser_repository.py
src/infrastructure/: config.py
src/infrastructure/cache/: redis_client.py  redis_manager.py
src/infrastructure/database/: alchemy_config.py  init_database.py  mixins.py  uow.py
src/infrastructure/di/: app_provider.py  database_di.py  repository_di.py  repository_provider.py  service_provider.py  use_case_di.py  use_case_provider.py
src/infrastructure/di_providers/: app_provider.py  dao_provider.py  database_provider.py  service_provider.py  use_case_provider.py
src/infrastructure/services/: jwt_service.py
src/infrastructure/utils/: autowired.py  import_routers.py  jwt_service.py  security.py
(+27 files in other folders)
